# bcos-gateway

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
bcos-gateway/: CMakeLists.txt  Common.h  DynamicGatewayNodeManager.cpp  Gateway.cpp  Gateway.h  GatewayConfig.cpp  GatewayConfig.h  GatewayFactory.cpp  GatewayFactory.h  GatewayMessage.cpp  GatewayMessage.h  GatewayNodeManager.cpp  GatewayNodeManager.h
bcos-gateway/libamop/: AMOP.cpp  AMOP.h  AMOPImpl.cpp  AMOPImpl.h  AMOPMessage.cpp  AMOPMessage.h  AMOPRequest.cpp  AMOPRequest.h  Common.h  LocalTopicManager.h  TopicManager.cpp  TopicManager.h
bcos-gateway/libnetwork/: ASIOInterface.cpp  ASIOInterface.h  CMakeLists.txt  Common.h  Host.cpp  Host.h  Message.h  Session.cpp  Session.h  SessionFace.h  Socket.h  SocketFace.h
bcos-gateway/libp2p/: CMakeLists.txt  Common.h  P2PInterface.h  P2PMessage.cpp  P2PMessage.h  P2PSession.cpp  P2PSession.h  P2PVersion.cpp  P2PVersion.h  Service.cpp  Service.h
cmake/: InstallInclude.cmake  config.cmake
doc/: README_CN.md
gateway/: CMakeLists.txt  Common.h  Gateway.cpp  Gateway.h  GatewayConfig.cpp  GatewayConfig.h  GatewayFactory.cpp  GatewayFactory.h  GatewayNodeManager.cpp  GatewayNodeManager.h
gateway/libnetwork/: ASIOInterface.cpp  ASIOInterface.h  CMakeLists.txt  Common.h  Host.cpp  Host.h  Session.cpp  Session.h  SessionFace.h  Socket.h  SocketFace.h
gateway/libp2p/: CMakeLists.txt  Common.h  P2PInterface.h  P2PMessage.cpp  P2PMessage.h  P2PSession.cpp  P2PSession.h  Service.cpp  Service.h
test/: CMakeLists.txt
test/common/: FrontServiceBuilder.h
test/integtests/: GatewayTest.cpp
test/main/: CMakeLists.txt  main.cpp
test/unittests/: GatewayConfigTest.cpp  GatewayFactoryTest.cpp  GatewayMessageTest.cpp  GatewayNodeManagerTest.cpp  GatewayTest.cpp
test/unittests/amop/: AMOPMessageTest.cpp  TopicManagerTest.cpp
test/unittests/data/config/: config_ipv6.ini
test/unittests/data/gm_ca/: sm_ca.crt  sm_ennode.crt  sm_ennode.key  sm_node.crt  sm_node.key  sm_node.nodeid  sm_node.serial
tools/: build_gateway_config.sh  build_gateway_env.sh
